[package]
name = "rustle"
description = "Keep your digital speakers from sleeping, using low sound signals"
homepage = "https://github.com/rasmus-kirk/rustle"
repository = "https://github.com/rasmus-kirk/rustle"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
rodio = "0.21"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
sysinfo = "0"
